--- a/assets/templates/edit-tournament.html.tmpl
+++ b/assets/templates/edit-tournament.html.tmpl
@@ -36,9 +36,7 @@
   </style>
 
 
-  <h1> EDIT EVENT {{ $.Tournament.EventID }} ... </h1>
-
-  <p> VERSION {{ .Version }}</p>
+  <h1> EDIT EVENT {{ $.Tournament.EventID }} </p>
 
   <form method="post">
     <input type="hidden" name="Version" value="{{ .Version }}">
